crates/pardosa-genome/tests/compile_fail/nested_usize.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    counts: Vec<usize>,
}

fn main() {}
